shap summary plot

--- a/ipynb/filter_biom_table.ipynb
+++ b/ipynb/filter_biom_table.ipynb
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e8071787",
+   "id": "c11faa33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c588d15e",
+   "id": "8c29501e",
    "metadata": {
     "scrolled": true
    },
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0cd7eb0b",
+   "id": "a016936d",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e2cf7555",
+   "id": "74b5e134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a6b4109",
+   "id": "962a6775",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6df2a411",
+   "id": "d70d35a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d75de01d",
+   "id": "1e306617",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b13a516b",
+   "id": "f3a75aa6",
    "metadata": {
     "scrolled": true
    },
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c1c8e5c8",
+   "id": "8b2be68d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,11 +192,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1716869e",
+   "execution_count": 19,
+   "id": "41456377",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#/mnt/home/djin/ceph/snakemake/data/Combined_12datasets/biom\n",
+    "woltka tools merge -i Laske2022AD_filtered.biom \\\n",
+    "                   -i iMSMS2021MS_filtered.biom \\\n",
+    "                   -i Qin2012T2D_filtered.biom \\\n",
+    "                   -i Dan2020ASD.biom \\\n",
+    "                   -i Wang2020ASD_filtered.biom \\\n",
+    "                   -i Franzosa2019IBD_CD.biom \\\n",
+    "                   -i Zhu2020Schizophrenia_filtered_new.biom \\\n",
+    "                   -i Wan2022ASD.biom  \\\n",
+    "                   -i Nielsen2014UC_filtered_140.biom \\\n",
+    "                   -i Qin2010IBD_filtered_100.biom \\\n",
+    "                   -i Qian2020PD.biom \\\n",
+    "                   -i diabimmune.biom \\\n",
+    "                   -o combined_12datasets.biom\n",
+    "\n",
+    "# Reading profiles...\n",
+    "#   Read Laske2022AD_filtered.biom. Samples: 150, features: 3443.☑️\n",
+    "#   Read iMSMS2021MS_filtered.biom. Samples: 60, features: 3091. ☑️\n",
+    "#   Read Qin2012T2D_filtered.biom. Samples: 152, features: 3443. ☑️\n",
+    "#   Read Dan2020ASD.biom. Samples: 60, features: 3432.☑️\n",
+    "#   Read Wang2020ASD_filtered.biom. Samples: 62, features: 3436.☑️\n",
+    "#   Read Franzosa2019IBD_CD.biom. Samples: 108, features: 3442.☑️\n",
+    "#   Read Zhu2020Schizophrenia_filtered_new.biom. Samples: 162, features: 3443.☑️\n",
+    "#   Read Wan2022ASD.biom. Samples: 128, features: 3444.☑️\n",
+    "#   Read Nielsen2014UC_filtered_140.biom. Samples: 140, features: 3440.☑️\n",
+    "#   Read Qin2010IBD_filtered_100.biom. Samples: 100, features: 3338.☑️\n",
+    "#   Read Qian2020PD.biom. Samples: 80, features: 3438. ☑️\n",
+    "#   Read diabimmune.biom. Samples: 106, features: 3084.☑️\n",
+    "# Done. Number of profiles read: 12.\n",
+    "# Merging profiles... Done.\n",
+    "# Number of samples after merging: 1308.\n",
+    "# Number of features after merging: 3444.\n",
+    "# Merged profile written."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe5abe9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qiime tools import \\\n",
+    "  --input-path biom/combined_12datasets.biom \\\n",
+    "  --type 'FeatureTable[Frequency]' \\\n",
+    "  --input-format BIOMV210Format \\\n",
+    "  --output-path combined_12datasets.qza\n",
+    "\n",
+    "\n",
+    "qiime sample-classifier classify-samples \\\n",
+    "  --i-table combined_12datasets.qza \\\n",
+    "  --m-metadata-file metadata.txt \\\n",
+    "  --m-metadata-column Status \\\n",
+    "  --p-optimize-feature-selection \\\n",
+    "  --p-parameter-tuning \\\n",
+    "  --p-estimator GradientBoostingClassifier \\\n",
+    "  --p-n-estimators 100 \\\n",
+    "  --p-random-state 123 \\\n",
+    "  --output-dir GB-pictures-classifier_p100"
+   ]
   }
  ],
  "metadata": {
