--- a/ipynb/Venn_diagram.ipynb
+++ b/ipynb/Venn_diagram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "2a34767f",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "id": "365a0e71",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "8ab50927",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "9940f460",
    "metadata": {},
    "outputs": [],
@@ -954,9 +954,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "id": "7c3608c5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -988,6 +990,138 @@
     "#beneficial microbes in healthy, T2D & CD\n",
     "venn2([set_T2D_b, set_CD_b], ('set_T2D_b','set_CD_b'))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ec43faae",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'CAG-115 sp003531585',\n",
+       " 'CAG-269 sp001916005',\n",
+       " 'CAG-417 sp000432835',\n",
+       " 'Eubacterium_R sp000434995',\n",
+       " 'Phascolarctobacterium_A succinatutens',\n",
+       " 'Prevotellamassilia sp900539625',\n",
+       " 'TF01-11 sp003529475'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_T2D_b.intersection(set_CD_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f50da9db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Acidaminococcus fermentans',\n",
+       " 'Acidaminococcus intestini',\n",
+       " 'Acidaminococcus sp000437815',\n",
+       " 'Agathobaculum sp900291975',\n",
+       " 'Agathobaculum sp900557315',\n",
+       " 'Anaerostipes caccae',\n",
+       " 'Anaerostipes sp000508985',\n",
+       " 'Anaerotignum sp001304995',\n",
+       " 'Bacteroides graminisolvens',\n",
+       " 'Bacteroides oleiciplenus',\n",
+       " 'Bariatricus massiliensis',\n",
+       " 'Bifidobacterium breve',\n",
+       " 'Bifidobacterium dentium',\n",
+       " 'Bifidobacterium scardovii',\n",
+       " 'Bifidobacterium sp900551485',\n",
+       " 'Blautia coccoides',\n",
+       " 'Blautia hominis',\n",
+       " 'Blautia sp900543715',\n",
+       " 'Blautia sp900547685',\n",
+       " 'Blautia_A sp900541345',\n",
+       " 'CAG-317 sp900543415',\n",
+       " 'Citrobacter_A sp009363175',\n",
+       " 'Clostridium paraputrificum',\n",
+       " 'Clostridium_AQ innocuum',\n",
+       " 'Clostridium_AQ sp003481775',\n",
+       " 'Clostridium_Q sp900547735',\n",
+       " 'Clostridium_Q symbiosum',\n",
+       " 'Collinsella sp900551195',\n",
+       " 'Collinsella sp900551665',\n",
+       " 'Eggerthella lenta',\n",
+       " 'Eggerthella sinensis',\n",
+       " 'Eisenbergiella sp900548905',\n",
+       " 'Eisenbergiella sp900555195',\n",
+       " 'Emergencia sp900551775',\n",
+       " 'Emergencia timonensis',\n",
+       " 'Enterocloster clostridioformis',\n",
+       " 'Enterocloster clostridioformis_A',\n",
+       " 'Enterocloster sp005845215',\n",
+       " 'Enterocloster sp900538485',\n",
+       " 'Enterocloster sp900540675',\n",
+       " 'Enterocloster sp900770345',\n",
+       " 'Enterococcus faecalis',\n",
+       " 'Enterococcus_A avium',\n",
+       " 'Enterococcus_B faecium',\n",
+       " 'Erysipelatoclostridium ramosum',\n",
+       " 'F0422 sp003999875',\n",
+       " 'Fusicatenibacter sp900543115',\n",
+       " 'Fusobacterium nucleatum_E',\n",
+       " 'Hungatella effluvii',\n",
+       " 'Hungatella sp005845265',\n",
+       " 'Hungatella_A hathewayi_A',\n",
+       " 'Klebsiella_A oxytoca',\n",
+       " 'Kluyvera sp902363335',\n",
+       " 'Lachnoclostridium_A edouardi',\n",
+       " 'Lactobacillus acidophilus',\n",
+       " 'Lactobacillus amylolyticus',\n",
+       " 'Lactobacillus amylovorus',\n",
+       " 'Lactobacillus crispatus',\n",
+       " 'Lactobacillus delbrueckii',\n",
+       " 'Lactobacillus gallinarum',\n",
+       " 'Lactobacillus johnsonii',\n",
+       " 'Limosilactobacillus mucosae',\n",
+       " 'Limosilactobacillus sp012843675',\n",
+       " 'Limosilactobacillus vaginalis_A',\n",
+       " 'Megasphaera sp900539295',\n",
+       " 'Megasphaera stantonii',\n",
+       " 'Muricomes oroticus',\n",
+       " 'Paenibacillus lactis',\n",
+       " 'Parabacteroides bouchesdurhonensis',\n",
+       " 'Parabacteroides distasonis',\n",
+       " 'Parabacteroides sp900541965',\n",
+       " 'Robinsoniella sp900539655',\n",
+       " 'Ruthenibacterium lactatiformans',\n",
+       " 'Schaedlerella sp900765975',\n",
+       " 'Sellimonas intestinalis',\n",
+       " 'Sellimonas sp002161525',\n",
+       " 'Streptococcus anginosus',\n",
+       " 'Streptococcus anginosus_C',\n",
+       " 'Streptococcus constellatus',\n",
+       " 'UBA1417 sp900549945',\n",
+       " 'UMGS1472 sp900552095',\n",
+       " 'Veillonella parvula_A',\n",
+       " 'Veillonella_A sp900765165'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_T2D_d.intersection(set_CD_d)"
    ]
   },
   {
@@ -2005,7 +2139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
