--- a/ipynb/log2foldchange_CI_5_95_deseq2.ipynb
+++ b/ipynb/log2foldchange_CI_5_95_deseq2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a2fafea9",
    "metadata": {},
    "outputs": [],
@@ -46,6 +46,221 @@
     "table_t2d_positive = table_t2d.sort_values(by=['CI_5'],ascending=False).head(100)\n",
     "table_cd_positive = table_cd.sort_values(by=['CI_5'],ascending=False).head(100)\n",
     "table_asd_positive = table_asd.sort_values(by=['CI_5'],ascending=False).head(100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "df1b2f32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>baseMean</th>\n",
+       "      <th>log2FoldChange</th>\n",
+       "      <th>lfcSE</th>\n",
+       "      <th>stat</th>\n",
+       "      <th>pvalue</th>\n",
+       "      <th>padj</th>\n",
+       "      <th>CI_5</th>\n",
+       "      <th>CI_95</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1102</th>\n",
+       "      <td>Collinsella sp900544845</td>\n",
+       "      <td>14.304342</td>\n",
+       "      <td>-25.088221</td>\n",
+       "      <td>1.884790</td>\n",
+       "      <td>-13.310882</td>\n",
+       "      <td>2.001057e-40</td>\n",
+       "      <td>2.886524e-37</td>\n",
+       "      <td>-28.782343</td>\n",
+       "      <td>-21.394100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1049</th>\n",
+       "      <td>Collinsella sp900541055</td>\n",
+       "      <td>18.861798</td>\n",
+       "      <td>-25.473966</td>\n",
+       "      <td>2.623006</td>\n",
+       "      <td>-9.711744</td>\n",
+       "      <td>2.687003e-22</td>\n",
+       "      <td>1.107429e-19</td>\n",
+       "      <td>-30.614964</td>\n",
+       "      <td>-20.332968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1265</th>\n",
+       "      <td>Collinsella sp900766165</td>\n",
+       "      <td>12.070344</td>\n",
+       "      <td>-23.162063</td>\n",
+       "      <td>1.693041</td>\n",
+       "      <td>-13.680747</td>\n",
+       "      <td>1.323262e-42</td>\n",
+       "      <td>3.817610e-39</td>\n",
+       "      <td>-26.480362</td>\n",
+       "      <td>-19.843764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1103</th>\n",
+       "      <td>Collinsella sp900544865</td>\n",
+       "      <td>7.084321</td>\n",
+       "      <td>-24.103393</td>\n",
+       "      <td>2.678033</td>\n",
+       "      <td>-9.000409</td>\n",
+       "      <td>2.248780e-19</td>\n",
+       "      <td>5.897936e-17</td>\n",
+       "      <td>-29.352241</td>\n",
+       "      <td>-18.854545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1893</th>\n",
+       "      <td>Lactobacillus gallinarum</td>\n",
+       "      <td>1072.145362</td>\n",
+       "      <td>-10.655044</td>\n",
+       "      <td>1.848051</td>\n",
+       "      <td>-5.765557</td>\n",
+       "      <td>8.138837e-09</td>\n",
+       "      <td>4.119394e-07</td>\n",
+       "      <td>-14.277157</td>\n",
+       "      <td>-7.032930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>Bifidobacterium angulatum</td>\n",
+       "      <td>530.501876</td>\n",
+       "      <td>-2.831278</td>\n",
+       "      <td>0.706021</td>\n",
+       "      <td>-4.010187</td>\n",
+       "      <td>6.067061e-05</td>\n",
+       "      <td>7.920123e-04</td>\n",
+       "      <td>-4.215054</td>\n",
+       "      <td>-1.447501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Acidaminococcus fermentans_A</td>\n",
+       "      <td>146.425308</td>\n",
+       "      <td>-2.185365</td>\n",
+       "      <td>0.384456</td>\n",
+       "      <td>-5.684309</td>\n",
+       "      <td>1.313428e-08</td>\n",
+       "      <td>6.315398e-07</td>\n",
+       "      <td>-2.938885</td>\n",
+       "      <td>-1.431846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1089</th>\n",
+       "      <td>Collinsella sp900543615</td>\n",
+       "      <td>9.298892</td>\n",
+       "      <td>-6.635836</td>\n",
+       "      <td>2.666314</td>\n",
+       "      <td>-2.488767</td>\n",
+       "      <td>1.281868e-02</td>\n",
+       "      <td>5.024715e-02</td>\n",
+       "      <td>-11.861717</td>\n",
+       "      <td>-1.409956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2046</th>\n",
+       "      <td>Methanobrevibacter_A smithii</td>\n",
+       "      <td>301.274031</td>\n",
+       "      <td>-2.798464</td>\n",
+       "      <td>0.709072</td>\n",
+       "      <td>-3.946656</td>\n",
+       "      <td>7.925030e-05</td>\n",
+       "      <td>9.770817e-04</td>\n",
+       "      <td>-4.188220</td>\n",
+       "      <td>-1.408708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2827</th>\n",
+       "      <td>Sutterella sp900757865</td>\n",
+       "      <td>4.505045</td>\n",
+       "      <td>-4.624857</td>\n",
+       "      <td>1.655705</td>\n",
+       "      <td>-2.793286</td>\n",
+       "      <td>5.217560e-03</td>\n",
+       "      <td>2.534118e-02</td>\n",
+       "      <td>-7.869980</td>\n",
+       "      <td>-1.379735</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Unnamed: 0     baseMean  log2FoldChange     lfcSE  \\\n",
+       "1102       Collinsella sp900544845    14.304342      -25.088221  1.884790   \n",
+       "1049       Collinsella sp900541055    18.861798      -25.473966  2.623006   \n",
+       "1265       Collinsella sp900766165    12.070344      -23.162063  1.693041   \n",
+       "1103       Collinsella sp900544865     7.084321      -24.103393  2.678033   \n",
+       "1893      Lactobacillus gallinarum  1072.145362      -10.655044  1.848051   \n",
+       "...                            ...          ...             ...       ...   \n",
+       "302      Bifidobacterium angulatum   530.501876       -2.831278  0.706021   \n",
+       "27    Acidaminococcus fermentans_A   146.425308       -2.185365  0.384456   \n",
+       "1089       Collinsella sp900543615     9.298892       -6.635836  2.666314   \n",
+       "2046  Methanobrevibacter_A smithii   301.274031       -2.798464  0.709072   \n",
+       "2827        Sutterella sp900757865     4.505045       -4.624857  1.655705   \n",
+       "\n",
+       "           stat        pvalue          padj       CI_5      CI_95  \n",
+       "1102 -13.310882  2.001057e-40  2.886524e-37 -28.782343 -21.394100  \n",
+       "1049  -9.711744  2.687003e-22  1.107429e-19 -30.614964 -20.332968  \n",
+       "1265 -13.680747  1.323262e-42  3.817610e-39 -26.480362 -19.843764  \n",
+       "1103  -9.000409  2.248780e-19  5.897936e-17 -29.352241 -18.854545  \n",
+       "1893  -5.765557  8.138837e-09  4.119394e-07 -14.277157  -7.032930  \n",
+       "...         ...           ...           ...        ...        ...  \n",
+       "302   -4.010187  6.067061e-05  7.920123e-04  -4.215054  -1.447501  \n",
+       "27    -5.684309  1.313428e-08  6.315398e-07  -2.938885  -1.431846  \n",
+       "1089  -2.488767  1.281868e-02  5.024715e-02 -11.861717  -1.409956  \n",
+       "2046  -3.946656  7.925030e-05  9.770817e-04  -4.188220  -1.408708  \n",
+       "2827  -2.793286  5.217560e-03  2.534118e-02  -7.869980  -1.379735  \n",
+       "\n",
+       "[100 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_t2d_negative"
    ]
   },
   {
@@ -110,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "288180fe",
    "metadata": {},
    "outputs": [
@@ -134,7 +349,7 @@
        " 'Prevotella sp900556795'}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "id": "71f2e7d6",
    "metadata": {
     "scrolled": false
@@ -191,7 +406,7 @@
        " 'Megasphaera massiliensis'}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,6 +415,16 @@
     "venn2([set_t2d_negative, set_cd_negative], ('set_t2d_negative','set_cd_negative'))\n",
     "plt.show()\n",
     "set_t2d_negative.intersection(set_cd_negative)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b19da14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save the list"
    ]
   },
   {
